<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.danteyu.studio.moodietrail.ui.psytest.PsyTestViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/button_close_psy_test"
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="44dp"
            android:background="@drawable/ic_close"
            android:backgroundTint="@color/blue_700"
            android:onClick="@{() -> viewModel.leavePsyTest()}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="44dp"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="@dimen/spacing_quarter"
            app:layout_constraintBottom_toBottomOf="@id/text_title_psy_test"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/text_title_psy_test"
            app:layout_constraintTop_toTopOf="@id/text_title_psy_test"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_bsrs_5" />

        <TextView
            android:id="@+id/text_title_psy_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_underline"
            android:fontFamily="@font/droid_sans"
            android:padding="@dimen/spacing_quarter"
            android:text="@string/bsrs_5"
            android:textColor="@color/black_3f3a3a"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/text_instruction_psy_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:fontFamily="@font/droid_sans"
            android:lineSpacingExtra="10dp"
            android:text="@string/test_instruction"
            android:textColor="@color/black_3f3a3a"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_psy_test" />

        <Button
            android:id="@+id/button_start_psy_test"
            style="@style/RecordMoodButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:onClick="@{() -> viewModel.navigateToPsyTestBody()}"
            android:text="@string/test_start"
            android:textColor="@color/blue_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_instruction_psy_test"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>