<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialog"
            type="com.danteyu.studio.moodietrail.recordmood.ImageSourceSelectorDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:onClick="@{() -> dialog.dismiss()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:background="@drawable/bg_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_message_icon"
                android:layout_width="28dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_logo_option"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="@font/droid_sans"
                android:maxLines="2"
                android:text='@string/add_photo_title'
                android:textColor="@color/black_3f3a3a"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/image_message_icon"
                app:layout_constraintStart_toEndOf="@id/image_message_icon"
                app:layout_constraintTop_toTopOf="@id/image_message_icon" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_half"
                android:background="@color/blue_700_Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_message_icon" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_basic"
                android:tint="@color/blue_700"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="@id/button_camera"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/button_camera"
                app:layout_constraintTop_toTopOf="@id/button_camera"
                app:srcCompat="@drawable/ic_camera" />

            <Button
                android:id="@+id/button_camera"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:text="@string/add_photo"
                android:textColor="@color/blue_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <View
                android:id="@+id/camera_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_camera" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_basic"
                android:tint="@color/blue_700"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="@id/button_photo"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/button_photo"
                app:layout_constraintTop_toTopOf="@id/button_photo"
                app:srcCompat="@drawable/ic_photo" />

            <Button
                android:id="@+id/button_photo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:text="@string/choose_from_gallery"
                android:textColor="@color/blue_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/camera_separator" />

            <View
                android:id="@+id/photo_separator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/blue_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_photo" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="0dp"
                android:layout_marginStart="19dp"
                android:tint="@color/blue_700"
                app:layout_constraintBottom_toBottomOf="@id/button_cancel"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/button_cancel"
                app:layout_constraintTop_toTopOf="@id/button_cancel"
                app:srcCompat="@drawable/ic_cancel" />

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:text="@string/text_cancel"
                android:textColor="@color/blue_700"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_separator" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>